parser.output
Rules useless in parser due to conflicts

   28 argument_type_declaration: %empty


State 25 conflicts: 2 reduce/reduce
State 27 conflicts: 2 reduce/reduce
State 29 conflicts: 2 reduce/reduce
State 219 conflicts: 1 shift/reduce
State 232 conflicts: 1 shift/reduce
State 234 conflicts: 11 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: optional_declaration_list procedure_definition_list

    2 optional_declaration_list: optional_declaration_list variable_declaration_global
    3                          | optional_declaration_list procedure_declaration
    4                          | %empty

    5 variable_declaration_global: integer_declaration_global ';'
    6                            | float_declaration_global ';'

    7 integer_declaration_global: INTEGER integer_variable_list_global

    8 integer_variable_list_global: NAME
    9                             | integer_variable_list_global ',' NAME

   10 float_declaration_global: FLOAT float_variable_list_global

   11 float_variable_list_global: NAME
   12                           | float_variable_list_global ',' NAME

   13 procedure_declaration: VOID NAME '(' argument_type_declaration ')' ';'
   14                      | INTEGER NAME '(' argument_type_declaration ')' ';'
   15                      | FLOAT NAME '(' argument_type_declaration ')' ';'
   16                      | VOID NAME '(' argument_declaration ')' ';'
   17                      | INTEGER NAME '(' argument_declaration ')' ';'
   18                      | FLOAT NAME '(' argument_declaration ')' ';'

   19 argument_declaration: argument_declaration ',' INTEGER NAME
   20                     | argument_declaration ',' FLOAT NAME
   21                     | INTEGER NAME
   22                     | FLOAT NAME
   23                     | %empty

   24 argument_type_declaration: argument_type_declaration ',' INTEGER
   25                          | argument_type_declaration ',' FLOAT
   26                          | INTEGER
   27                          | FLOAT
   28                          | %empty

   29 procedure_definition_list: procedure_definition procedure_definition_list_temp

   30 procedure_definition_list_temp: procedure_definition procedure_definition_list_temp
   31                               | %empty

   32 $@1: %empty

   33 procedure_definition: VOID NAME '(' argument_declaration ')' '{' $@1 declaration_list '}'

   34 $@2: %empty

   35 procedure_definition: INTEGER NAME '(' argument_declaration ')' '{' $@2 declaration_list '}'

   36 $@3: %empty

   37 procedure_definition: FLOAT NAME '(' argument_declaration ')' '{' $@3 declaration_list '}'

   38 procedure_call: NAME '(' name_list ')'
   39               | NAME '(' ')'

   40 name_list: name_list ',' expression
   41          | expression

   42 declaration_list: declaration_list variable_declaration
   43                 | declaration_list assignment_statement
   44                 | declaration_list while_statement
   45                 | declaration_list if_statement
   46                 | declaration_list do_while_statement
   47                 | declaration_list '{' declaration_list '}'
   48                 | declaration_list print_statement
   49                 | declaration_list procedure_call ';'
   50                 | declaration_list RETURN expression ';'
   51                 | declaration_list RETURN ';'
   52                 | %empty

   53 declaration_list_loop: declaration_list_loop variable_declaration
   54                      | declaration_list_loop assignment_statement
   55                      | declaration_list_loop while_statement
   56                      | declaration_list_loop if_statement
   57                      | declaration_list_loop do_while_statement
   58                      | declaration_list_loop '{' declaration_list_loop '}'
   59                      | declaration_list_loop print_statement
   60                      | declaration_list_loop procedure_call ';'
   61                      | declaration_list_loop RETURN expression ';'
   62                      | declaration_list_loop RETURN ';'
   63                      | %empty

   64 print_statement: PRINT variable ';'

   65 variable_declaration: integer_declaration ';'
   66                     | float_declaration ';'

   67 integer_declaration: INTEGER integer_variable_list

   68 integer_variable_list: NAME
   69                      | integer_variable_list ',' NAME

   70 float_declaration: FLOAT float_variable_list

   71 float_variable_list: NAME
   72                    | float_variable_list ',' NAME

   73 assignment_statement: assign_expression ASSIGN expression ';'

   74 assign_expression: variable

   75 expression: '(' expression ')'
   76           | expression '/' expression
   77           | expression '*' expression
   78           | expression '+' expression
   79           | expression '-' expression
   80           | '-' expression
   81           | ternary_operator
   82           | value

   83 value: variable
   84      | constant
   85      | procedure_call

   86 variable: NAME

   87 constant: INTEGER_NUMBER
   88         | DOUBLE_NUMBER

   89 conditional_statement: expression LESS_THAN_EQUAL expression
   90                      | expression LESS_THAN expression
   91                      | expression GREATER_THAN expression
   92                      | expression GREATER_THAN_EQUAL expression
   93                      | expression EQUAL expression
   94                      | expression NOT_EQUAL expression
   95                      | conditional_statement OR conditional_statement
   96                      | conditional_statement AND conditional_statement
   97                      | NOT conditional_statement
   98                      | '(' conditional_statement ')'

   99 if_statement: IF '(' conditional_statement ')' '{' declaration_list_loop '}' else_statement
  100             | IF '(' conditional_statement ')' program_statements else_statement

  101 else_statement: ELSE if_statement
  102               | ELSE '{' declaration_list_loop '}'
  103               | ELSE program_statements
  104               | %empty

  105 while_statement: WHILE '(' conditional_statement ')' '{' declaration_list_loop '}'
  106                | WHILE '(' conditional_statement ')' program_statements

  107 do_while_statement: DO '{' declaration_list_loop '}' WHILE '(' conditional_statement ')' ';'
  108                   | DO program_statements WHILE '(' conditional_statement ')' ';'

  109 ternary_operator: conditional_statement '?' expression ':' expression

  110 program_statements: if_statement
  111                   | while_statement
  112                   | do_while_statement
  113                   | ternary_operator
  114                   | assignment_statement


Terminals, with rules where they appear

$end (0) 0
'(' (40) 13 14 15 16 17 18 33 35 37 38 39 75 98 99 100 105 106 107
    108
')' (41) 13 14 15 16 17 18 33 35 37 38 39 75 98 99 100 105 106 107
    108
'*' (42) 77
'+' (43) 78
',' (44) 9 12 19 20 24 25 40 69 72
'-' (45) 79 80
'/' (47) 76
':' (58) 109
';' (59) 5 6 13 14 15 16 17 18 49 50 51 60 61 62 64 65 66 73 107 108
'?' (63) 109
'{' (123) 33 35 37 47 58 99 102 105 107
'}' (125) 33 35 37 47 58 99 102 105 107
error (256)
INTEGER (258) 7 14 17 19 21 24 26 35 67
FLOAT (259) 10 15 18 20 22 25 27 37 70
ASSIGN (260) 73
VOID (261) 13 16 33
INTEGER_NUMBER (262) 87
DOUBLE_NUMBER (263) 88
NAME (264) 8 9 11 12 13 14 15 16 17 18 19 20 21 22 33 35 37 38 39 68
    69 71 72 86
DO (265) 107 108
WHILE (266) 105 106 107 108
IF (267) 99 100
ELSE (268) 101 102 103
PRINT (269) 64
RETURN (270) 50 51 61 62
OR (271) 95
AND (272) 96
EQUAL (273) 93
NOT_EQUAL (274) 94
LESS_THAN (275) 90
LESS_THAN_EQUAL (276) 89
GREATER_THAN (277) 91
GREATER_THAN_EQUAL (278) 92
"ter" (279)
NOT (280) 97


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
program (39)
    on left: 1, on right: 0
optional_declaration_list (40)
    on left: 2 3 4, on right: 1 2 3
variable_declaration_global (41)
    on left: 5 6, on right: 2
integer_declaration_global (42)
    on left: 7, on right: 5
integer_variable_list_global (43)
    on left: 8 9, on right: 7 9
float_declaration_global (44)
    on left: 10, on right: 6
float_variable_list_global (45)
    on left: 11 12, on right: 10 12
procedure_declaration (46)
    on left: 13 14 15 16 17 18, on right: 3
argument_declaration (47)
    on left: 19 20 21 22 23, on right: 16 17 18 19 20 33 35 37
argument_type_declaration (48)
    on left: 24 25 26 27 28, on right: 13 14 15 24 25
procedure_definition_list (49)
    on left: 29, on right: 1
procedure_definition_list_temp (50)
    on left: 30 31, on right: 29 30
procedure_definition (51)
    on left: 33 35 37, on right: 29 30
$@1 (52)
    on left: 32, on right: 33
$@2 (53)
    on left: 34, on right: 35
$@3 (54)
    on left: 36, on right: 37
procedure_call (55)
    on left: 38 39, on right: 49 60 85
name_list (56)
    on left: 40 41, on right: 38 40
declaration_list (57)
    on left: 42 43 44 45 46 47 48 49 50 51 52, on right: 33 35 37 42
    43 44 45 46 47 48 49 50 51
declaration_list_loop (58)
    on left: 53 54 55 56 57 58 59 60 61 62 63, on right: 53 54 55 56
    57 58 59 60 61 62 99 102 105 107
print_statement (59)
    on left: 64, on right: 48 59
variable_declaration (60)
    on left: 65 66, on right: 42 53
integer_declaration (61)
    on left: 67, on right: 65
integer_variable_list (62)
    on left: 68 69, on right: 67 69
float_declaration (63)
    on left: 70, on right: 66
float_variable_list (64)
    on left: 71 72, on right: 70 72
assignment_statement (65)
    on left: 73, on right: 43 54 114
assign_expression (66)
    on left: 74, on right: 73
expression (67)
    on left: 75 76 77 78 79 80 81 82, on right: 40 41 50 61 73 75 76
    77 78 79 80 89 90 91 92 93 94 109
value (68)
    on left: 83 84 85, on right: 82
variable (69)
    on left: 86, on right: 64 74 83
constant (70)
    on left: 87 88, on right: 84
conditional_statement (71)
    on left: 89 90 91 92 93 94 95 96 97 98, on right: 95 96 97 98 99
    100 105 106 107 108 109
if_statement (72)
    on left: 99 100, on right: 45 56 101 110
else_statement (73)
    on left: 101 102 103 104, on right: 99 100
while_statement (74)
    on left: 105 106, on right: 44 55 111
do_while_statement (75)
    on left: 107 108, on right: 46 57 112
ternary_operator (76)
    on left: 109, on right: 81 113
program_statements (77)
    on left: 110 111 112 113 114, on right: 100 103 106 108


State 0

    0 $accept: . program $end

    $default  reduce using rule 4 (optional_declaration_list)

    program                    go to state 1
    optional_declaration_list  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: optional_declaration_list . procedure_definition_list
    2 optional_declaration_list: optional_declaration_list . variable_declaration_global
    3                          | optional_declaration_list . procedure_declaration

    INTEGER  shift, and go to state 4
    FLOAT    shift, and go to state 5
    VOID     shift, and go to state 6

    variable_declaration_global  go to state 7
    integer_declaration_global   go to state 8
    float_declaration_global     go to state 9
    procedure_declaration        go to state 10
    procedure_definition_list    go to state 11
    procedure_definition         go to state 12


State 3

    0 $accept: program $end .

    $default  accept


State 4

    7 integer_declaration_global: INTEGER . integer_variable_list_global
   14 procedure_declaration: INTEGER . NAME '(' argument_type_declaration ')' ';'
   17                      | INTEGER . NAME '(' argument_declaration ')' ';'
   35 procedure_definition: INTEGER . NAME '(' argument_declaration ')' '{' $@2 declaration_list '}'

    NAME  shift, and go to state 13

    integer_variable_list_global  go to state 14


State 5

   10 float_declaration_global: FLOAT . float_variable_list_global
   15 procedure_declaration: FLOAT . NAME '(' argument_type_declaration ')' ';'
   18                      | FLOAT . NAME '(' argument_declaration ')' ';'
   37 procedure_definition: FLOAT . NAME '(' argument_declaration ')' '{' $@3 declaration_list '}'

    NAME  shift, and go to state 15

    float_variable_list_global  go to state 16


State 6

   13 procedure_declaration: VOID . NAME '(' argument_type_declaration ')' ';'
   16                      | VOID . NAME '(' argument_declaration ')' ';'
   33 procedure_definition: VOID . NAME '(' argument_declaration ')' '{' $@1 declaration_list '}'

    NAME  shift, and go to state 17


State 7

    2 optional_declaration_list: optional_declaration_list variable_declaration_global .

    $default  reduce using rule 2 (optional_declaration_list)


State 8

    5 variable_declaration_global: integer_declaration_global . ';'

    ';'  shift, and go to state 18


State 9

    6 variable_declaration_global: float_declaration_global . ';'

    ';'  shift, and go to state 19


State 10

    3 optional_declaration_list: optional_declaration_list procedure_declaration .

    $default  reduce using rule 3 (optional_declaration_list)


State 11

    1 program: optional_declaration_list procedure_definition_list .

    $default  reduce using rule 1 (program)


State 12

   29 procedure_definition_list: procedure_definition . procedure_definition_list_temp

    INTEGER  shift, and go to state 20
    FLOAT    shift, and go to state 21
    VOID     shift, and go to state 22

    $default  reduce using rule 31 (procedure_definition_list_temp)

    procedure_definition_list_temp  go to state 23
    procedure_definition            go to state 24


State 13

    8 integer_variable_list_global: NAME .
   14 procedure_declaration: INTEGER NAME . '(' argument_type_declaration ')' ';'
   17                      | INTEGER NAME . '(' argument_declaration ')' ';'
   35 procedure_definition: INTEGER NAME . '(' argument_declaration ')' '{' $@2 declaration_list '}'

    '('  shift, and go to state 25

    $default  reduce using rule 8 (integer_variable_list_global)


State 14

    7 integer_declaration_global: INTEGER integer_variable_list_global .
    9 integer_variable_list_global: integer_variable_list_global . ',' NAME

    ','  shift, and go to state 26

    $default  reduce using rule 7 (integer_declaration_global)


State 15

   11 float_variable_list_global: NAME .
   15 procedure_declaration: FLOAT NAME . '(' argument_type_declaration ')' ';'
   18                      | FLOAT NAME . '(' argument_declaration ')' ';'
   37 procedure_definition: FLOAT NAME . '(' argument_declaration ')' '{' $@3 declaration_list '}'

    '('  shift, and go to state 27

    $default  reduce using rule 11 (float_variable_list_global)


State 16

   10 float_declaration_global: FLOAT float_variable_list_global .
   12 float_variable_list_global: float_variable_list_global . ',' NAME

    ','  shift, and go to state 28

    $default  reduce using rule 10 (float_declaration_global)


State 17

   13 procedure_declaration: VOID NAME . '(' argument_type_declaration ')' ';'
   16                      | VOID NAME . '(' argument_declaration ')' ';'
   33 procedure_definition: VOID NAME . '(' argument_declaration ')' '{' $@1 declaration_list '}'

    '('  shift, and go to state 29


State 18

    5 variable_declaration_global: integer_declaration_global ';' .

    $default  reduce using rule 5 (variable_declaration_global)


State 19

    6 variable_declaration_global: float_declaration_global ';' .

    $default  reduce using rule 6 (variable_declaration_global)


State 20

   35 procedure_definition: INTEGER . NAME '(' argument_declaration ')' '{' $@2 declaration_list '}'

    NAME  shift, and go to state 30


State 21

   37 procedure_definition: FLOAT . NAME '(' argument_declaration ')' '{' $@3 declaration_list '}'

    NAME  shift, and go to state 31


State 22

   33 procedure_definition: VOID . NAME '(' argument_declaration ')' '{' $@1 declaration_list '}'

    NAME  shift, and go to state 32


State 23

   29 procedure_definition_list: procedure_definition procedure_definition_list_temp .

    $default  reduce using rule 29 (procedure_definition_list)


State 24

   30 procedure_definition_list_temp: procedure_definition . procedure_definition_list_temp

    INTEGER  shift, and go to state 20
    FLOAT    shift, and go to state 21
    VOID     shift, and go to state 22

    $default  reduce using rule 31 (procedure_definition_list_temp)

    procedure_definition_list_temp  go to state 33
    procedure_definition            go to state 24


State 25

   14 procedure_declaration: INTEGER NAME '(' . argument_type_declaration ')' ';'
   17                      | INTEGER NAME '(' . argument_declaration ')' ';'
   35 procedure_definition: INTEGER NAME '(' . argument_declaration ')' '{' $@2 declaration_list '}'

    INTEGER  shift, and go to state 34
    FLOAT    shift, and go to state 35

    ')'       reduce using rule 23 (argument_declaration)
    ')'       [reduce using rule 28 (argument_type_declaration)]
    ','       reduce using rule 23 (argument_declaration)
    ','       [reduce using rule 28 (argument_type_declaration)]
    $default  reduce using rule 23 (argument_declaration)

    argument_declaration       go to state 36
    argument_type_declaration  go to state 37


State 26

    9 integer_variable_list_global: integer_variable_list_global ',' . NAME

    NAME  shift, and go to state 38


State 27

   15 procedure_declaration: FLOAT NAME '(' . argument_type_declaration ')' ';'
   18                      | FLOAT NAME '(' . argument_declaration ')' ';'
   37 procedure_definition: FLOAT NAME '(' . argument_declaration ')' '{' $@3 declaration_list '}'

    INTEGER  shift, and go to state 34
    FLOAT    shift, and go to state 35

    ')'       reduce using rule 23 (argument_declaration)
    ')'       [reduce using rule 28 (argument_type_declaration)]
    ','       reduce using rule 23 (argument_declaration)
    ','       [reduce using rule 28 (argument_type_declaration)]
    $default  reduce using rule 23 (argument_declaration)

    argument_declaration       go to state 39
    argument_type_declaration  go to state 40


State 28

   12 float_variable_list_global: float_variable_list_global ',' . NAME

    NAME  shift, and go to state 41


State 29

   13 procedure_declaration: VOID NAME '(' . argument_type_declaration ')' ';'
   16                      | VOID NAME '(' . argument_declaration ')' ';'
   33 procedure_definition: VOID NAME '(' . argument_declaration ')' '{' $@1 declaration_list '}'

    INTEGER  shift, and go to state 34
    FLOAT    shift, and go to state 35

    ')'       reduce using rule 23 (argument_declaration)
    ')'       [reduce using rule 28 (argument_type_declaration)]
    ','       reduce using rule 23 (argument_declaration)
    ','       [reduce using rule 28 (argument_type_declaration)]
    $default  reduce using rule 23 (argument_declaration)

    argument_declaration       go to state 42
    argument_type_declaration  go to state 43


State 30

   35 procedure_definition: INTEGER NAME . '(' argument_declaration ')' '{' $@2 declaration_list '}'

    '('  shift, and go to state 44


State 31

   37 procedure_definition: FLOAT NAME . '(' argument_declaration ')' '{' $@3 declaration_list '}'

    '('  shift, and go to state 45


State 32

   33 procedure_definition: VOID NAME . '(' argument_declaration ')' '{' $@1 declaration_list '}'

    '('  shift, and go to state 46


State 33

   30 procedure_definition_list_temp: procedure_definition procedure_definition_list_temp .

    $default  reduce using rule 30 (procedure_definition_list_temp)


State 34

   21 argument_declaration: INTEGER . NAME
   26 argument_type_declaration: INTEGER .

    NAME  shift, and go to state 47

    $default  reduce using rule 26 (argument_type_declaration)


State 35

   22 argument_declaration: FLOAT . NAME
   27 argument_type_declaration: FLOAT .

    NAME  shift, and go to state 48

    $default  reduce using rule 27 (argument_type_declaration)


State 36

   17 procedure_declaration: INTEGER NAME '(' argument_declaration . ')' ';'
   19 argument_declaration: argument_declaration . ',' INTEGER NAME
   20                     | argument_declaration . ',' FLOAT NAME
   35 procedure_definition: INTEGER NAME '(' argument_declaration . ')' '{' $@2 declaration_list '}'

    ')'  shift, and go to state 49
    ','  shift, and go to state 50


State 37

   14 procedure_declaration: INTEGER NAME '(' argument_type_declaration . ')' ';'
   24 argument_type_declaration: argument_type_declaration . ',' INTEGER
   25                          | argument_type_declaration . ',' FLOAT

    ')'  shift, and go to state 51
    ','  shift, and go to state 52


State 38

    9 integer_variable_list_global: integer_variable_list_global ',' NAME .

    $default  reduce using rule 9 (integer_variable_list_global)


State 39

   18 procedure_declaration: FLOAT NAME '(' argument_declaration . ')' ';'
   19 argument_declaration: argument_declaration . ',' INTEGER NAME
   20                     | argument_declaration . ',' FLOAT NAME
   37 procedure_definition: FLOAT NAME '(' argument_declaration . ')' '{' $@3 declaration_list '}'

    ')'  shift, and go to state 53
    ','  shift, and go to state 50


State 40

   15 procedure_declaration: FLOAT NAME '(' argument_type_declaration . ')' ';'
   24 argument_type_declaration: argument_type_declaration . ',' INTEGER
   25                          | argument_type_declaration . ',' FLOAT

    ')'  shift, and go to state 54
    ','  shift, and go to state 52


State 41

   12 float_variable_list_global: float_variable_list_global ',' NAME .

    $default  reduce using rule 12 (float_variable_list_global)


State 42

   16 procedure_declaration: VOID NAME '(' argument_declaration . ')' ';'
   19 argument_declaration: argument_declaration . ',' INTEGER NAME
   20                     | argument_declaration . ',' FLOAT NAME
   33 procedure_definition: VOID NAME '(' argument_declaration . ')' '{' $@1 declaration_list '}'

    ')'  shift, and go to state 55
    ','  shift, and go to state 50


State 43

   13 procedure_declaration: VOID NAME '(' argument_type_declaration . ')' ';'
   24 argument_type_declaration: argument_type_declaration . ',' INTEGER
   25                          | argument_type_declaration . ',' FLOAT

    ')'  shift, and go to state 56
    ','  shift, and go to state 52


State 44

   35 procedure_definition: INTEGER NAME '(' . argument_declaration ')' '{' $@2 declaration_list '}'

    INTEGER  shift, and go to state 57
    FLOAT    shift, and go to state 58

    $default  reduce using rule 23 (argument_declaration)

    argument_declaration  go to state 59


State 45

   37 procedure_definition: FLOAT NAME '(' . argument_declaration ')' '{' $@3 declaration_list '}'

    INTEGER  shift, and go to state 57
    FLOAT    shift, and go to state 58

    $default  reduce using rule 23 (argument_declaration)

    argument_declaration  go to state 60


State 46

   33 procedure_definition: VOID NAME '(' . argument_declaration ')' '{' $@1 declaration_list '}'

    INTEGER  shift, and go to state 57
    FLOAT    shift, and go to state 58

    $default  reduce using rule 23 (argument_declaration)

    argument_declaration  go to state 61


State 47

   21 argument_declaration: INTEGER NAME .

    $default  reduce using rule 21 (argument_declaration)


State 48

   22 argument_declaration: FLOAT NAME .

    $default  reduce using rule 22 (argument_declaration)


State 49

   17 procedure_declaration: INTEGER NAME '(' argument_declaration ')' . ';'
   35 procedure_definition: INTEGER NAME '(' argument_declaration ')' . '{' $@2 declaration_list '}'

    ';'  shift, and go to state 62
    '{'  shift, and go to state 63


State 50

   19 argument_declaration: argument_declaration ',' . INTEGER NAME
   20                     | argument_declaration ',' . FLOAT NAME

    INTEGER  shift, and go to state 64
    FLOAT    shift, and go to state 65


State 51

   14 procedure_declaration: INTEGER NAME '(' argument_type_declaration ')' . ';'

    ';'  shift, and go to state 66


State 52

   24 argument_type_declaration: argument_type_declaration ',' . INTEGER
   25                          | argument_type_declaration ',' . FLOAT

    INTEGER  shift, and go to state 67
    FLOAT    shift, and go to state 68


State 53

   18 procedure_declaration: FLOAT NAME '(' argument_declaration ')' . ';'
   37 procedure_definition: FLOAT NAME '(' argument_declaration ')' . '{' $@3 declaration_list '}'

    ';'  shift, and go to state 69
    '{'  shift, and go to state 70


State 54

   15 procedure_declaration: FLOAT NAME '(' argument_type_declaration ')' . ';'

    ';'  shift, and go to state 71


State 55

   16 procedure_declaration: VOID NAME '(' argument_declaration ')' . ';'
   33 procedure_definition: VOID NAME '(' argument_declaration ')' . '{' $@1 declaration_list '}'

    ';'  shift, and go to state 72
    '{'  shift, and go to state 73


State 56

   13 procedure_declaration: VOID NAME '(' argument_type_declaration ')' . ';'

    ';'  shift, and go to state 74


State 57

   21 argument_declaration: INTEGER . NAME

    NAME  shift, and go to state 47


State 58

   22 argument_declaration: FLOAT . NAME

    NAME  shift, and go to state 48


State 59

   19 argument_declaration: argument_declaration . ',' INTEGER NAME
   20                     | argument_declaration . ',' FLOAT NAME
   35 procedure_definition: INTEGER NAME '(' argument_declaration . ')' '{' $@2 declaration_list '}'

    ')'  shift, and go to state 75
    ','  shift, and go to state 50


State 60

   19 argument_declaration: argument_declaration . ',' INTEGER NAME
   20                     | argument_declaration . ',' FLOAT NAME
   37 procedure_definition: FLOAT NAME '(' argument_declaration . ')' '{' $@3 declaration_list '}'

    ')'  shift, and go to state 76
    ','  shift, and go to state 50


State 61

   19 argument_declaration: argument_declaration . ',' INTEGER NAME
   20                     | argument_declaration . ',' FLOAT NAME
   33 procedure_definition: VOID NAME '(' argument_declaration . ')' '{' $@1 declaration_list '}'

    ')'  shift, and go to state 77
    ','  shift, and go to state 50


State 62

   17 procedure_declaration: INTEGER NAME '(' argument_declaration ')' ';' .

    $default  reduce using rule 17 (procedure_declaration)


State 63

   35 procedure_definition: INTEGER NAME '(' argument_declaration ')' '{' . $@2 declaration_list '}'

    $default  reduce using rule 34 ($@2)

    $@2  go to state 78


State 64

   19 argument_declaration: argument_declaration ',' INTEGER . NAME

    NAME  shift, and go to state 79


State 65

   20 argument_declaration: argument_declaration ',' FLOAT . NAME

    NAME  shift, and go to state 80


State 66

   14 procedure_declaration: INTEGER NAME '(' argument_type_declaration ')' ';' .

    $default  reduce using rule 14 (procedure_declaration)


State 67

   24 argument_type_declaration: argument_type_declaration ',' INTEGER .

    $default  reduce using rule 24 (argument_type_declaration)


State 68

   25 argument_type_declaration: argument_type_declaration ',' FLOAT .

    $default  reduce using rule 25 (argument_type_declaration)


State 69

   18 procedure_declaration: FLOAT NAME '(' argument_declaration ')' ';' .

    $default  reduce using rule 18 (procedure_declaration)


State 70

   37 procedure_definition: FLOAT NAME '(' argument_declaration ')' '{' . $@3 declaration_list '}'

    $default  reduce using rule 36 ($@3)

    $@3  go to state 81


State 71

   15 procedure_declaration: FLOAT NAME '(' argument_type_declaration ')' ';' .

    $default  reduce using rule 15 (procedure_declaration)


State 72

   16 procedure_declaration: VOID NAME '(' argument_declaration ')' ';' .

    $default  reduce using rule 16 (procedure_declaration)


State 73

   33 procedure_definition: VOID NAME '(' argument_declaration ')' '{' . $@1 declaration_list '}'

    $default  reduce using rule 32 ($@1)

    $@1  go to state 82


State 74

   13 procedure_declaration: VOID NAME '(' argument_type_declaration ')' ';' .

    $default  reduce using rule 13 (procedure_declaration)


State 75

   35 procedure_definition: INTEGER NAME '(' argument_declaration ')' . '{' $@2 declaration_list '}'

    '{'  shift, and go to state 63


State 76

   37 procedure_definition: FLOAT NAME '(' argument_declaration ')' . '{' $@3 declaration_list '}'

    '{'  shift, and go to state 70


State 77

   33 procedure_definition: VOID NAME '(' argument_declaration ')' . '{' $@1 declaration_list '}'

    '{'  shift, and go to state 73


State 78

   35 procedure_definition: INTEGER NAME '(' argument_declaration ')' '{' $@2 . declaration_list '}'

    $default  reduce using rule 52 (declaration_list)

    declaration_list  go to state 83


State 79

   19 argument_declaration: argument_declaration ',' INTEGER NAME .

    $default  reduce using rule 19 (argument_declaration)


State 80

   20 argument_declaration: argument_declaration ',' FLOAT NAME .

    $default  reduce using rule 20 (argument_declaration)


State 81

   37 procedure_definition: FLOAT NAME '(' argument_declaration ')' '{' $@3 . declaration_list '}'

    $default  reduce using rule 52 (declaration_list)

    declaration_list  go to state 84


State 82

   33 procedure_definition: VOID NAME '(' argument_declaration ')' '{' $@1 . declaration_list '}'

    $default  reduce using rule 52 (declaration_list)

    declaration_list  go to state 85


State 83

   35 procedure_definition: INTEGER NAME '(' argument_declaration ')' '{' $@2 declaration_list . '}'
   42 declaration_list: declaration_list . variable_declaration
   43                 | declaration_list . assignment_statement
   44                 | declaration_list . while_statement
   45                 | declaration_list . if_statement
   46                 | declaration_list . do_while_statement
   47                 | declaration_list . '{' declaration_list '}'
   48                 | declaration_list . print_statement
   49                 | declaration_list . procedure_call ';'
   50                 | declaration_list . RETURN expression ';'
   51                 | declaration_list . RETURN ';'

    INTEGER  shift, and go to state 86
    FLOAT    shift, and go to state 87
    NAME     shift, and go to state 88
    DO       shift, and go to state 89
    WHILE    shift, and go to state 90
    IF       shift, and go to state 91
    PRINT    shift, and go to state 92
    RETURN   shift, and go to state 93
    '{'      shift, and go to state 94
    '}'      shift, and go to state 95

    procedure_call        go to state 96
    print_statement       go to state 97
    variable_declaration  go to state 98
    integer_declaration   go to state 99
    float_declaration     go to state 100
    assignment_statement  go to state 101
    assign_expression     go to state 102
    variable              go to state 103
    if_statement          go to state 104
    while_statement       go to state 105
    do_while_statement    go to state 106


State 84

   37 procedure_definition: FLOAT NAME '(' argument_declaration ')' '{' $@3 declaration_list . '}'
   42 declaration_list: declaration_list . variable_declaration
   43                 | declaration_list . assignment_statement
   44                 | declaration_list . while_statement
   45                 | declaration_list . if_statement
   46                 | declaration_list . do_while_statement
   47                 | declaration_list . '{' declaration_list '}'
   48                 | declaration_list . print_statement
   49                 | declaration_list . procedure_call ';'
   50                 | declaration_list . RETURN expression ';'
   51                 | declaration_list . RETURN ';'

    INTEGER  shift, and go to state 86
    FLOAT    shift, and go to state 87
    NAME     shift, and go to state 88
    DO       shift, and go to state 89
    WHILE    shift, and go to state 90
    IF       shift, and go to state 91
    PRINT    shift, and go to state 92
    RETURN   shift, and go to state 93
    '{'      shift, and go to state 94
    '}'      shift, and go to state 107

    procedure_call        go to state 96
    print_statement       go to state 97
    variable_declaration  go to state 98
    integer_declaration   go to state 99
    float_declaration     go to state 100
    assignment_statement  go to state 101
    assign_expression     go to state 102
    variable              go to state 103
    if_statement          go to state 104
    while_statement       go to state 105
    do_while_statement    go to state 106


State 85

   33 procedure_definition: VOID NAME '(' argument_declaration ')' '{' $@1 declaration_list . '}'
   42 declaration_list: declaration_list . variable_declaration
   43                 | declaration_list . assignment_statement
   44                 | declaration_list . while_statement
   45                 | declaration_list . if_statement
   46                 | declaration_list . do_while_statement
   47                 | declaration_list . '{' declaration_list '}'
   48                 | declaration_list . print_statement
   49                 | declaration_list . procedure_call ';'
   50                 | declaration_list . RETURN expression ';'
   51                 | declaration_list . RETURN ';'

    INTEGER  shift, and go to state 86
    FLOAT    shift, and go to state 87
    NAME     shift, and go to state 88
    DO       shift, and go to state 89
    WHILE    shift, and go to state 90
    IF       shift, and go to state 91
    PRINT    shift, and go to state 92
    RETURN   shift, and go to state 93
    '{'      shift, and go to state 94
    '}'      shift, and go to state 108

    procedure_call        go to state 96
    print_statement       go to state 97
    variable_declaration  go to state 98
    integer_declaration   go to state 99
    float_declaration     go to state 100
    assignment_statement  go to state 101
    assign_expression     go to state 102
    variable              go to state 103
    if_statement          go to state 104
    while_statement       go to state 105
    do_while_statement    go to state 106


State 86

   67 integer_declaration: INTEGER . integer_variable_list

    NAME  shift, and go to state 109

    integer_variable_list  go to state 110


State 87

   70 float_declaration: FLOAT . float_variable_list

    NAME  shift, and go to state 111

    float_variable_list  go to state 112


State 88

   38 procedure_call: NAME . '(' name_list ')'
   39               | NAME . '(' ')'
   86 variable: NAME .

    '('  shift, and go to state 113

    $default  reduce using rule 86 (variable)


State 89

  107 do_while_statement: DO . '{' declaration_list_loop '}' WHILE '(' conditional_statement ')' ';'
  108                   | DO . program_statements WHILE '(' conditional_statement ')' ';'

    INTEGER_NUMBER  shift, and go to state 114
    DOUBLE_NUMBER   shift, and go to state 115
    NAME            shift, and go to state 88
    DO              shift, and go to state 89
    WHILE           shift, and go to state 90
    IF              shift, and go to state 91
    '-'             shift, and go to state 116
    NOT             shift, and go to state 117
    '('             shift, and go to state 118
    '{'             shift, and go to state 119

    procedure_call         go to state 120
    assignment_statement   go to state 121
    assign_expression      go to state 102
    expression             go to state 122
    value                  go to state 123
    variable               go to state 124
    constant               go to state 125
    conditional_statement  go to state 126
    if_statement           go to state 127
    while_statement        go to state 128
    do_while_statement     go to state 129
    ternary_operator       go to state 130
    program_statements     go to state 131


State 90

  105 while_statement: WHILE . '(' conditional_statement ')' '{' declaration_list_loop '}'
  106                | WHILE . '(' conditional_statement ')' program_statements

    '('  shift, and go to state 132


State 91

   99 if_statement: IF . '(' conditional_statement ')' '{' declaration_list_loop '}' else_statement
  100             | IF . '(' conditional_statement ')' program_statements else_statement

    '('  shift, and go to state 133


State 92

   64 print_statement: PRINT . variable ';'

    NAME  shift, and go to state 134

    variable  go to state 135


State 93

   50 declaration_list: declaration_list RETURN . expression ';'
   51                 | declaration_list RETURN . ';'

    INTEGER_NUMBER  shift, and go to state 114
    DOUBLE_NUMBER   shift, and go to state 115
    NAME            shift, and go to state 88
    ';'             shift, and go to state 136
    '-'             shift, and go to state 116
    NOT             shift, and go to state 117
    '('             shift, and go to state 118

    procedure_call         go to state 120
    expression             go to state 137
    value                  go to state 123
    variable               go to state 138
    constant               go to state 125
    conditional_statement  go to state 126
    ternary_operator       go to state 139


State 94

   47 declaration_list: declaration_list '{' . declaration_list '}'

    $default  reduce using rule 52 (declaration_list)

    declaration_list  go to state 140


State 95

   35 procedure_definition: INTEGER NAME '(' argument_declaration ')' '{' $@2 declaration_list '}' .

    $default  reduce using rule 35 (procedure_definition)


State 96

   49 declaration_list: declaration_list procedure_call . ';'

    ';'  shift, and go to state 141


State 97
